test/domains/compilerErrors/notsupportedBulkAdd-ok.chpl
use notsupportedCommon;

var inds = [1, 2, 3];

//writeln(dfltRectangularBase.bulkAdd(inds));
//writeln(dfltAssociativeBase.bulkAdd(inds));
//writeln(DistributedBase.bulkAdd(inds));
//writeln(dfltRectangularSubdomain.bulkAdd(inds));
//writeln(dfltAssociativeSubdomain.bulkAdd(inds));
//writeln(DistributedSubdomain.bulkAdd(inds));

writeln(dfltRectangularSparseSub.bulkAdd(inds));
//writeln(dfltAssociativeSparseSub.bulkAdd(inds));
writeln(DistributedSparseSub.bulkAdd(inds));
